# TrabalhoDeVisao

./: .gitignore  README.md  download_dataset.py  pyproject.toml  requirements.txt
configs/: train.toml  train_four_strategies.toml  train_four_strategies_class_weighted.toml  train_no_augmentation.toml  train_paper_augmentation.toml  train_two_strategies_example.toml  train_v2.toml
docs/: data_augmentation_report.md
notebooks/: metricas_analises.ipynb  unet_correto.ipynb
resultados_eval_b8_best/: metrics.json
tests/: test_losses.py  test_model.py  test_model_v2.py  test_train_config.py  test_transforms.py  test_weights.py
unet_bccd/: __init__.py  augmentation.py  data_prep.py  dataset.py  evaluate.py  losses.py  metrics.py  model.py  model_v2.py  preview_augmentations.py  train.py  transforms.py  utils.py  visualization.py  weights.py
